--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 			href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap"
 			rel="stylesheet"
 		/>
-		<link rel="stylesheet" href="/css/style.css" />
+		<link rel="stylesheet" href="css/style.css" />
 
 		<style>
 			body {
-				background: url('/images/204023.jpg') center;
+				background: url('images/204023.jpg') center;
 				background-size: cover;
 			}
 		</style>
