--- a/og-page6.html
+++ b/og-page6.html
@@ -16,7 +16,7 @@
 		/>
 		<meta
 			property="og:image"
-			content="/images/legacy protection rev_jpeg.jpg"
+			content="images/legacy protection rev_jpeg.jpg"
 			data-react-helmet="true"
 		/>
 		<script
@@ -24,15 +24,10 @@
 			crossorigin="anonymous"
 		></script>
 
-		<link
-			rel="stylesheet"
-			href="path/to/font-awesome/css/font-awesome.min.css"
-		/>
-
-		<link rel="stylesheet" href="/css/style.css" />
+		<link rel="stylesheet" href="css/style.css" />
 		<style>
 			body {
-				background: url('/images/legacy protection rev_jpeg.jpg') center;
+				background: url('images/legacy protection rev_jpeg.jpg') center;
 				background-size: cover;
 			}
 		</style>
