--- a/og-page4.html
+++ b/og-page4.html
@@ -16,7 +16,7 @@
 		/>
 		<meta
 			property="og:image"
-			content="/images/elite link.png"
+			content="images/elite link.png"
 			data-react-helmet="true"
 		/>
 		<script
@@ -24,10 +24,10 @@
 			crossorigin="anonymous"
 		></script>
 
-		<link rel="stylesheet" href="/css/style.css" />
+		<link rel="stylesheet" href="css/style.css" />
 		<style>
 			body {
-				background: url('/images/elite link.png') center;
+				background: url('images/elite link.png') center;
 				background-size: cover;
 			}
 		</style>
