--- a/og-page6.html
+++ b/og-page6.html
@@ -54,7 +54,9 @@
 				</div>
 			</div>
 		</div>
-		<a href="/" class="backButton"><i class="fa fa-chevron-left"></i></a>
+		<a href="index.html" class="backButton"
+			><i class="fa fa-chevron-left"></i
+		></a>
 		<script>
 			const icon1 = document.querySelector('.icon1')
 			const icon2 = document.querySelector('.icon2')
