type meta added

--- a/og-page5.html
+++ b/og-page5.html
@@ -19,6 +19,7 @@
 			content="images/FWD Cancer Protection.jpg"
 			data-react-helmet="true"
 		/>
+		<meta property="og:type" content="website" />
 		<script
 			src="https://kit.fontawesome.com/e9ffa5034d.js"
 			crossorigin="anonymous"
