--- a/og-page6.html
+++ b/og-page6.html
@@ -23,7 +23,7 @@
 			src="https://kit.fontawesome.com/e9ffa5034d.js"
 			crossorigin="anonymous"
 		></script>
-
+		<meta property="og:type" content="website" />
 		<link rel="stylesheet" href="css/style.css" />
 		<style>
 			body {
