--- a/og-page4.html
+++ b/og-page4.html
@@ -19,6 +19,7 @@
 			content="images/elite link.png"
 			data-react-helmet="true"
 		/>
+		<meta property="og:type" content="website" />
 		<script
 			src="https://kit.fontawesome.com/e9ffa5034d.js"
 			crossorigin="anonymous"
