--- a/og-page1.html
+++ b/og-page1.html
@@ -14,11 +14,7 @@
 			content="Asuransi Bebas Handal hadir dengan manfaat lengkap kesehatan mulai dari biaya tindakan bedah hingga manfaat tunai harian sesuai dengan prinsip syariah."
 			data-react-helmet="true"
 		/>
-		<meta
-			property="og:image"
-			content="images/Asuransi-Bebas-Optimal.jpg"
-			data-react-helmet="true"
-		/>
+		<meta property="og:image" content="images/1.jpg" data-react-helmet="true" />
 		<meta property="og:image:width" content="300" />
 		<meta property="og:type" content="website" />
 		<script
