--- a/og-page1.html
+++ b/og-page1.html
@@ -15,6 +15,11 @@
 			data-react-helmet="true"
 		/>
 		<meta property="og:image" content="images/1.jpg" data-react-helmet="true" />
+		<meta
+			property="og:image"
+			content="images/1-x300.jpg"
+			data-react-helmet="true"
+		/>
 		<meta property="og:image:width" content="300" />
 		<meta property="og:type" content="website" />
 		<script
