--- a/og-page1.html
+++ b/og-page1.html
@@ -15,11 +15,7 @@
 			data-react-helmet="true"
 		/>
 		<meta property="og:image" content="images/1.jpg" data-react-helmet="true" />
-		<meta
-			property="og:image"
-			content="images/1-x300.jpg"
-			data-react-helmet="true"
-		/>
+		<meta property="og:image" content="images/1.jpg" data-react-helmet="true" />
 		<meta property="og:type" content="website" />
 		<script
 			src="https://kit.fontawesome.com/e9ffa5034d.js"
