--- a/og-page1.html
+++ b/og-page1.html
@@ -14,8 +14,11 @@
 			content="Asuransi Bebas Handal hadir dengan manfaat lengkap kesehatan mulai dari biaya tindakan bedah hingga manfaat tunai harian sesuai dengan prinsip syariah."
 			data-react-helmet="true"
 		/>
-		<meta property="og:image" content="images/1.jpg" data-react-helmet="true" />
-		<meta property="og:image" content="images/1.jpg" data-react-helmet="true" />
+		<meta
+			property="og:image"
+			content="https://jeshu.github.io/og-image-size-check/images/1.jpg"
+			data-react-helmet="true"
+		/>
 		<meta property="og:type" content="website" />
 		<script
 			src="https://kit.fontawesome.com/e9ffa5034d.js"
